// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inference: Structs > dependent structs > dependent field referring to later field: { y: :x + 2, x: 1 } 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ ?5",
      "?5 ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?2",
    ],
    "term": "Struct [ y: + :x 2, x: 1 ]",
    "type": "Schema [ y: Num, x: Num ]",
  },
}
`;

exports[`Inference: Structs > dependent structs > dependent field referring to later field: { y: :x + 2, x: 1 } 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 4,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
    },
    "term": {
      "arg": {
        "row": {
          "label": "y",
          "row": {
            "label": "x",
            "row": {
              "type": "empty",
            },
            "type": "extension",
            "value": {
              "type": "Lit",
              "value": {
                "type": "Num",
                "value": 1,
              },
            },
          },
          "type": "extension",
          "value": {
            "arg": {
              "type": "Lit",
              "value": {
                "type": "Num",
                "value": 2,
              },
            },
            "func": {
              "arg": {
                "type": "Var",
                "variable": {
                  "name": "x",
                  "type": "Label",
                },
              },
              "func": {
                "type": "Var",
                "variable": {
                  "name": "+",
                  "type": "Free",
                },
              },
              "icit": "Explicit",
              "type": "App",
            },
            "icit": "Explicit",
            "type": "App",
          },
        },
        "type": "Row",
      },
      "func": {
        "type": "Lit",
        "value": {
          "type": "Atom",
          "value": "Struct",
        },
      },
      "icit": "Explicit",
      "type": "App",
    },
    "type": {
      "type": "Neutral",
      "value": {
        "arg": {
          "row": {
            "label": "y",
            "row": {
              "label": "x",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Num",
                },
              },
            },
            "type": "extension",
            "value": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Num",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Schema",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: Structs > dependent structs > fields depending on previous fields: { x: 1, y: :x + 2 } 1`] = `
{
  "displays": {
    "constraints": [
      "?2 ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?5",
      "Num ~~ ?2",
    ],
    "term": "Struct [ x: 1, y: + :x 2 ]",
    "type": "Schema [ x: Num, y: Num ]",
  },
}
`;

exports[`Inference: Structs > dependent structs > fields depending on previous fields: { x: 1, y: :x + 2 } 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 4,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
    },
    "term": {
      "arg": {
        "row": {
          "label": "x",
          "row": {
            "label": "y",
            "row": {
              "type": "empty",
            },
            "type": "extension",
            "value": {
              "arg": {
                "type": "Lit",
                "value": {
                  "type": "Num",
                  "value": 2,
                },
              },
              "func": {
                "arg": {
                  "type": "Var",
                  "variable": {
                    "name": "x",
                    "type": "Label",
                  },
                },
                "func": {
                  "type": "Var",
                  "variable": {
                    "name": "+",
                    "type": "Free",
                  },
                },
                "icit": "Explicit",
                "type": "App",
              },
              "icit": "Explicit",
              "type": "App",
            },
          },
          "type": "extension",
          "value": {
            "type": "Lit",
            "value": {
              "type": "Num",
              "value": 1,
            },
          },
        },
        "type": "Row",
      },
      "func": {
        "type": "Lit",
        "value": {
          "type": "Atom",
          "value": "Struct",
        },
      },
      "icit": "Explicit",
      "type": "App",
    },
    "type": {
      "type": "Neutral",
      "value": {
        "arg": {
          "row": {
            "label": "x",
            "row": {
              "label": "y",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Num",
                },
              },
            },
            "type": "extension",
            "value": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Num",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Schema",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: Structs > dependent structs > mutually dependent fields: { a: :b + 1, b: :a + 1 } 1`] = `
{
  "displays": {
    "constraints": [
      "?2 ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?5",
      "?5 ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?2",
    ],
    "term": "Struct [ a: + :b 1, b: + :a 1 ]",
    "type": "Schema [ a: Num, b: Num ]",
  },
}
`;

exports[`Inference: Structs > dependent structs > mutually dependent fields: { a: :b + 1, b: :a + 1 } 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 4,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
    },
    "term": {
      "arg": {
        "row": {
          "label": "a",
          "row": {
            "label": "b",
            "row": {
              "type": "empty",
            },
            "type": "extension",
            "value": {
              "arg": {
                "type": "Lit",
                "value": {
                  "type": "Num",
                  "value": 1,
                },
              },
              "func": {
                "arg": {
                  "type": "Var",
                  "variable": {
                    "name": "a",
                    "type": "Label",
                  },
                },
                "func": {
                  "type": "Var",
                  "variable": {
                    "name": "+",
                    "type": "Free",
                  },
                },
                "icit": "Explicit",
                "type": "App",
              },
              "icit": "Explicit",
              "type": "App",
            },
          },
          "type": "extension",
          "value": {
            "arg": {
              "type": "Lit",
              "value": {
                "type": "Num",
                "value": 1,
              },
            },
            "func": {
              "arg": {
                "type": "Var",
                "variable": {
                  "name": "b",
                  "type": "Label",
                },
              },
              "func": {
                "type": "Var",
                "variable": {
                  "name": "+",
                  "type": "Free",
                },
              },
              "icit": "Explicit",
              "type": "App",
            },
            "icit": "Explicit",
            "type": "App",
          },
        },
        "type": "Row",
      },
      "func": {
        "type": "Lit",
        "value": {
          "type": "Atom",
          "value": "Struct",
        },
      },
      "icit": "Explicit",
      "type": "App",
    },
    "type": {
      "type": "Neutral",
      "value": {
        "arg": {
          "row": {
            "label": "a",
            "row": {
              "label": "b",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Num",
                },
              },
            },
            "type": "extension",
            "value": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Num",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Schema",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: Structs > dependent structs > nested dependent fields: { point: { x: 1, y: 2 }, halved: { a: :point.x / 2, b: :point.y / 2 } } 1`] = `
{
  "displays": {
    "constraints": [
      "Schema [ y: ?13 | ?14 ] ~~ ?2",
      "?13 ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?11",
      "Schema [ x: ?15 | ?16 ] ~~ ?2",
      "?15 ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?8",
      "Schema [ a: Num, b: Num ] ~~ ?5",
      "Num ~~ ?21",
      "Num ~~ ?18",
      "Schema [ x: Num, y: Num ] ~~ ?2",
    ],
    "term": "Struct [ point: Struct [ x: 1, y: 2 ], halved: Struct [ a: / (:point).x 2, b: / (:point).y 2 ] ]",
    "type": "Schema [ point: Schema [ x: Num, y: Num ], halved: Schema [ a: Num, b: Num ] ]",
  },
}
`;

exports[`Inference: Structs > dependent structs > nested dependent fields: { point: { x: 1, y: 2 }, halved: { a: :point.x / 2, b: :point.y / 2 } } 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "arg": {
            "row": {
              "label": "y",
              "row": {
                "type": "variable",
                "variable": {
                  "lvl": 0,
                  "type": "Meta",
                  "val": 14,
                },
              },
              "type": "extension",
              "value": {
                "type": "Neutral",
                "value": {
                  "type": "Var",
                  "variable": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 13,
                  },
                },
              },
            },
            "type": "Row",
          },
          "func": {
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Schema",
            },
          },
          "icit": "Explicit",
          "type": "App",
        },
        "lvl": 0,
        "right": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 13,
            },
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 11,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "arg": {
            "row": {
              "label": "x",
              "row": {
                "type": "variable",
                "variable": {
                  "lvl": 0,
                  "type": "Meta",
                  "val": 16,
                },
              },
              "type": "extension",
              "value": {
                "type": "Neutral",
                "value": {
                  "type": "Var",
                  "variable": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 15,
                  },
                },
              },
            },
            "type": "Row",
          },
          "func": {
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Schema",
            },
          },
          "icit": "Explicit",
          "type": "App",
        },
        "lvl": 0,
        "right": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 15,
            },
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 8,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "arg": {
              "row": {
                "label": "a",
                "row": {
                  "label": "b",
                  "row": {
                    "type": "empty",
                  },
                  "type": "extension",
                  "value": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Num",
                    },
                  },
                },
                "type": "extension",
                "value": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Num",
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "type": "App",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 21,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 18,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "arg": {
              "row": {
                "label": "x",
                "row": {
                  "label": "y",
                  "row": {
                    "type": "empty",
                  },
                  "type": "extension",
                  "value": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Num",
                    },
                  },
                },
                "type": "extension",
                "value": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Num",
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "type": "App",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "10": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 10,
        },
      },
      "11": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 10,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 11,
        },
      },
      "12": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 12,
        },
      },
      "13": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 13,
        },
      },
      "14": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 14,
        },
      },
      "15": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 15,
        },
      },
      "16": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 16,
        },
      },
      "17": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 17,
        },
      },
      "18": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 17,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 18,
        },
      },
      "19": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 19,
        },
      },
      "2": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "20": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 20,
        },
      },
      "21": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 20,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 21,
        },
      },
      "22": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 22,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 4,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
      "7": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 7,
        },
      },
      "8": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 7,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 8,
        },
      },
      "9": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 9,
        },
      },
    },
    "term": {
      "arg": {
        "row": {
          "label": "point",
          "row": {
            "label": "halved",
            "row": {
              "type": "empty",
            },
            "type": "extension",
            "value": {
              "arg": {
                "row": {
                  "label": "a",
                  "row": {
                    "label": "b",
                    "row": {
                      "type": "empty",
                    },
                    "type": "extension",
                    "value": {
                      "arg": {
                        "type": "Lit",
                        "value": {
                          "type": "Num",
                          "value": 2,
                        },
                      },
                      "func": {
                        "arg": {
                          "label": "y",
                          "term": {
                            "type": "Var",
                            "variable": {
                              "name": "point",
                              "type": "Label",
                            },
                          },
                          "type": "Proj",
                        },
                        "func": {
                          "type": "Var",
                          "variable": {
                            "name": "/",
                            "type": "Free",
                          },
                        },
                        "icit": "Explicit",
                        "type": "App",
                      },
                      "icit": "Explicit",
                      "type": "App",
                    },
                  },
                  "type": "extension",
                  "value": {
                    "arg": {
                      "type": "Lit",
                      "value": {
                        "type": "Num",
                        "value": 2,
                      },
                    },
                    "func": {
                      "arg": {
                        "label": "x",
                        "term": {
                          "type": "Var",
                          "variable": {
                            "name": "point",
                            "type": "Label",
                          },
                        },
                        "type": "Proj",
                      },
                      "func": {
                        "type": "Var",
                        "variable": {
                          "name": "/",
                          "type": "Free",
                        },
                      },
                      "icit": "Explicit",
                      "type": "App",
                    },
                    "icit": "Explicit",
                    "type": "App",
                  },
                },
                "type": "Row",
              },
              "func": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Struct",
                },
              },
              "icit": "Explicit",
              "type": "App",
            },
          },
          "type": "extension",
          "value": {
            "arg": {
              "row": {
                "label": "x",
                "row": {
                  "label": "y",
                  "row": {
                    "type": "empty",
                  },
                  "type": "extension",
                  "value": {
                    "type": "Lit",
                    "value": {
                      "type": "Num",
                      "value": 2,
                    },
                  },
                },
                "type": "extension",
                "value": {
                  "type": "Lit",
                  "value": {
                    "type": "Num",
                    "value": 1,
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Struct",
              },
            },
            "icit": "Explicit",
            "type": "App",
          },
        },
        "type": "Row",
      },
      "func": {
        "type": "Lit",
        "value": {
          "type": "Atom",
          "value": "Struct",
        },
      },
      "icit": "Explicit",
      "type": "App",
    },
    "type": {
      "type": "Neutral",
      "value": {
        "arg": {
          "row": {
            "label": "point",
            "row": {
              "label": "halved",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "type": "Neutral",
                "value": {
                  "arg": {
                    "row": {
                      "label": "a",
                      "row": {
                        "label": "b",
                        "row": {
                          "type": "empty",
                        },
                        "type": "extension",
                        "value": {
                          "type": "Lit",
                          "value": {
                            "type": "Atom",
                            "value": "Num",
                          },
                        },
                      },
                      "type": "extension",
                      "value": {
                        "type": "Lit",
                        "value": {
                          "type": "Atom",
                          "value": "Num",
                        },
                      },
                    },
                    "type": "Row",
                  },
                  "func": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Schema",
                    },
                  },
                  "icit": "Explicit",
                  "type": "App",
                },
              },
            },
            "type": "extension",
            "value": {
              "type": "Neutral",
              "value": {
                "arg": {
                  "row": {
                    "label": "x",
                    "row": {
                      "label": "y",
                      "row": {
                        "type": "empty",
                      },
                      "type": "extension",
                      "value": {
                        "type": "Lit",
                        "value": {
                          "type": "Atom",
                          "value": "Num",
                        },
                      },
                    },
                    "type": "extension",
                    "value": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Num",
                      },
                    },
                  },
                  "type": "Row",
                },
                "func": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Schema",
                  },
                },
                "icit": "Explicit",
                "type": "App",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Schema",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: Structs > dependent structs > nested shadowing dependencies: { overriden: 1, foo: { inner: :overriden }, bar: { overriden: "hello", inner: :overriden } 1`] = `
{
  "displays": {
    "constraints": [
      "?11 ~~ ?14",
      "String ~~ ?11",
      "Schema [ overriden: String, inner: ?11 ] ~~ ?8",
      "?2 ~~ ?17",
      "Schema [ inner: ?2 ] ~~ ?5",
      "Num ~~ ?2",
    ],
    "term": "Struct [ overriden: 1, foo: Struct [ inner: :overriden ], bar: Struct [ overriden: "hello", inner: :overriden ] ]",
    "type": "Schema [ overriden: Num, foo: Schema [ inner: ?2 ], bar: Schema [ overriden: String, inner: ?11 ] ]",
  },
}
`;

exports[`Inference: Structs > dependent structs > nested shadowing dependencies: { overriden: 1, foo: { inner: :overriden }, bar: { overriden: "hello", inner: :overriden } 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 11,
            },
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 14,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 11,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "arg": {
              "row": {
                "label": "overriden",
                "row": {
                  "label": "inner",
                  "row": {
                    "type": "empty",
                  },
                  "type": "extension",
                  "value": {
                    "type": "Neutral",
                    "value": {
                      "type": "Var",
                      "variable": {
                        "lvl": 0,
                        "type": "Meta",
                        "val": 11,
                      },
                    },
                  },
                },
                "type": "extension",
                "value": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "String",
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "type": "App",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 8,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 17,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "arg": {
              "row": {
                "label": "inner",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "type": "Neutral",
                  "value": {
                    "type": "Var",
                    "variable": {
                      "lvl": 0,
                      "type": "Meta",
                      "val": 2,
                    },
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "type": "App",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "10": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 10,
        },
      },
      "11": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 10,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 11,
        },
      },
      "12": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 12,
        },
      },
      "13": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 13,
        },
      },
      "14": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 13,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 14,
        },
      },
      "15": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 15,
        },
      },
      "16": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 16,
        },
      },
      "17": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 16,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 17,
        },
      },
      "18": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 18,
        },
      },
      "2": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 4,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
      "7": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 7,
        },
      },
      "8": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 7,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 8,
        },
      },
      "9": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 9,
        },
      },
    },
    "term": {
      "arg": {
        "row": {
          "label": "overriden",
          "row": {
            "label": "foo",
            "row": {
              "label": "bar",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "arg": {
                  "row": {
                    "label": "overriden",
                    "row": {
                      "label": "inner",
                      "row": {
                        "type": "empty",
                      },
                      "type": "extension",
                      "value": {
                        "type": "Var",
                        "variable": {
                          "name": "overriden",
                          "type": "Label",
                        },
                      },
                    },
                    "type": "extension",
                    "value": {
                      "type": "Lit",
                      "value": {
                        "type": "String",
                        "value": "hello",
                      },
                    },
                  },
                  "type": "Row",
                },
                "func": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Struct",
                  },
                },
                "icit": "Explicit",
                "type": "App",
              },
            },
            "type": "extension",
            "value": {
              "arg": {
                "row": {
                  "label": "inner",
                  "row": {
                    "type": "empty",
                  },
                  "type": "extension",
                  "value": {
                    "type": "Var",
                    "variable": {
                      "name": "overriden",
                      "type": "Label",
                    },
                  },
                },
                "type": "Row",
              },
              "func": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Struct",
                },
              },
              "icit": "Explicit",
              "type": "App",
            },
          },
          "type": "extension",
          "value": {
            "type": "Lit",
            "value": {
              "type": "Num",
              "value": 1,
            },
          },
        },
        "type": "Row",
      },
      "func": {
        "type": "Lit",
        "value": {
          "type": "Atom",
          "value": "Struct",
        },
      },
      "icit": "Explicit",
      "type": "App",
    },
    "type": {
      "type": "Neutral",
      "value": {
        "arg": {
          "row": {
            "label": "overriden",
            "row": {
              "label": "foo",
              "row": {
                "label": "bar",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "type": "Neutral",
                  "value": {
                    "arg": {
                      "row": {
                        "label": "overriden",
                        "row": {
                          "label": "inner",
                          "row": {
                            "type": "empty",
                          },
                          "type": "extension",
                          "value": {
                            "type": "Neutral",
                            "value": {
                              "type": "Var",
                              "variable": {
                                "lvl": 0,
                                "type": "Meta",
                                "val": 11,
                              },
                            },
                          },
                        },
                        "type": "extension",
                        "value": {
                          "type": "Lit",
                          "value": {
                            "type": "Atom",
                            "value": "String",
                          },
                        },
                      },
                      "type": "Row",
                    },
                    "func": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Schema",
                      },
                    },
                    "icit": "Explicit",
                    "type": "App",
                  },
                },
              },
              "type": "extension",
              "value": {
                "type": "Neutral",
                "value": {
                  "arg": {
                    "row": {
                      "label": "inner",
                      "row": {
                        "type": "empty",
                      },
                      "type": "extension",
                      "value": {
                        "type": "Neutral",
                        "value": {
                          "type": "Var",
                          "variable": {
                            "lvl": 0,
                            "type": "Meta",
                            "val": 2,
                          },
                        },
                      },
                    },
                    "type": "Row",
                  },
                  "func": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Schema",
                    },
                  },
                  "icit": "Explicit",
                  "type": "App",
                },
              },
            },
            "type": "extension",
            "value": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Num",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Schema",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: Structs > multiple fields: { x: 1, y: "hello" } 1`] = `
{
  "displays": {
    "constraints": [
      "String ~~ ?5",
      "Num ~~ ?2",
    ],
    "term": "Struct [ x: 1, y: "hello" ]",
    "type": "Schema [ x: Num, y: String ]",
  },
}
`;

exports[`Inference: Structs > multiple fields: { x: 1, y: "hello" } 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 4,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
    },
    "term": {
      "arg": {
        "row": {
          "label": "x",
          "row": {
            "label": "y",
            "row": {
              "type": "empty",
            },
            "type": "extension",
            "value": {
              "type": "Lit",
              "value": {
                "type": "String",
                "value": "hello",
              },
            },
          },
          "type": "extension",
          "value": {
            "type": "Lit",
            "value": {
              "type": "Num",
              "value": 1,
            },
          },
        },
        "type": "Row",
      },
      "func": {
        "type": "Lit",
        "value": {
          "type": "Atom",
          "value": "Struct",
        },
      },
      "icit": "Explicit",
      "type": "App",
    },
    "type": {
      "type": "Neutral",
      "value": {
        "arg": {
          "row": {
            "label": "x",
            "row": {
              "label": "y",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "String",
                },
              },
            },
            "type": "extension",
            "value": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Num",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Schema",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: Structs > nested structs: { point: { x: 1, y: 2 }, label: "A" } 1`] = `
{
  "displays": {
    "constraints": [
      "String ~~ ?5",
      "Num ~~ ?11",
      "Num ~~ ?8",
      "Schema [ x: Num, y: Num ] ~~ ?2",
    ],
    "term": "Struct [ point: Struct [ x: 1, y: 2 ], label: "A" ]",
    "type": "Schema [ point: Schema [ x: Num, y: Num ], label: String ]",
  },
}
`;

exports[`Inference: Structs > nested structs: { point: { x: 1, y: 2 }, label: "A" } 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 11,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 8,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "arg": {
              "row": {
                "label": "x",
                "row": {
                  "label": "y",
                  "row": {
                    "type": "empty",
                  },
                  "type": "extension",
                  "value": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Num",
                    },
                  },
                },
                "type": "extension",
                "value": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Num",
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "type": "App",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "10": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 10,
        },
      },
      "11": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 10,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 11,
        },
      },
      "12": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 12,
        },
      },
      "2": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 4,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
      "7": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 7,
        },
      },
      "8": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 7,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 8,
        },
      },
      "9": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 9,
        },
      },
    },
    "term": {
      "arg": {
        "row": {
          "label": "point",
          "row": {
            "label": "label",
            "row": {
              "type": "empty",
            },
            "type": "extension",
            "value": {
              "type": "Lit",
              "value": {
                "type": "String",
                "value": "A",
              },
            },
          },
          "type": "extension",
          "value": {
            "arg": {
              "row": {
                "label": "x",
                "row": {
                  "label": "y",
                  "row": {
                    "type": "empty",
                  },
                  "type": "extension",
                  "value": {
                    "type": "Lit",
                    "value": {
                      "type": "Num",
                      "value": 2,
                    },
                  },
                },
                "type": "extension",
                "value": {
                  "type": "Lit",
                  "value": {
                    "type": "Num",
                    "value": 1,
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Struct",
              },
            },
            "icit": "Explicit",
            "type": "App",
          },
        },
        "type": "Row",
      },
      "func": {
        "type": "Lit",
        "value": {
          "type": "Atom",
          "value": "Struct",
        },
      },
      "icit": "Explicit",
      "type": "App",
    },
    "type": {
      "type": "Neutral",
      "value": {
        "arg": {
          "row": {
            "label": "point",
            "row": {
              "label": "label",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "String",
                },
              },
            },
            "type": "extension",
            "value": {
              "type": "Neutral",
              "value": {
                "arg": {
                  "row": {
                    "label": "x",
                    "row": {
                      "label": "y",
                      "row": {
                        "type": "empty",
                      },
                      "type": "extension",
                      "value": {
                        "type": "Lit",
                        "value": {
                          "type": "Atom",
                          "value": "Num",
                        },
                      },
                    },
                    "type": "extension",
                    "value": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Num",
                      },
                    },
                  },
                  "type": "Row",
                },
                "func": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Schema",
                  },
                },
                "icit": "Explicit",
                "type": "App",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Schema",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: Structs > struct with computed field: { x: 1 + 2, y: "hello" } 1`] = `
{
  "displays": {
    "constraints": [
      "String ~~ ?5",
      "Num ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?2",
    ],
    "term": "Struct [ x: + 1 2, y: "hello" ]",
    "type": "Schema [ x: Num, y: String ]",
  },
}
`;

exports[`Inference: Structs > struct with computed field: { x: 1 + 2, y: "hello" } 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 4,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
    },
    "term": {
      "arg": {
        "row": {
          "label": "x",
          "row": {
            "label": "y",
            "row": {
              "type": "empty",
            },
            "type": "extension",
            "value": {
              "type": "Lit",
              "value": {
                "type": "String",
                "value": "hello",
              },
            },
          },
          "type": "extension",
          "value": {
            "arg": {
              "type": "Lit",
              "value": {
                "type": "Num",
                "value": 2,
              },
            },
            "func": {
              "arg": {
                "type": "Lit",
                "value": {
                  "type": "Num",
                  "value": 1,
                },
              },
              "func": {
                "type": "Var",
                "variable": {
                  "name": "+",
                  "type": "Free",
                },
              },
              "icit": "Explicit",
              "type": "App",
            },
            "icit": "Explicit",
            "type": "App",
          },
        },
        "type": "Row",
      },
      "func": {
        "type": "Lit",
        "value": {
          "type": "Atom",
          "value": "Struct",
        },
      },
      "icit": "Explicit",
      "type": "App",
    },
    "type": {
      "type": "Neutral",
      "value": {
        "arg": {
          "row": {
            "label": "x",
            "row": {
              "label": "y",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "String",
                },
              },
            },
            "type": "extension",
            "value": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Num",
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Schema",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
    },
    "typedTerms": {},
  },
}
`;
